# LAN-chat-app-rust

./: Cargo.toml  README.md  plan.md
localchat_daemon/: Cargo.toml
localchat_daemon/src/: main.rs
localchat_gui/: Cargo.toml
localchat_gui/src/: main.rs
localchat_gui/src/components/: chat_area.rs  footer.rs  history.rs  mod.rs  settings.rs  sidemenu.rs  topnav.rs
