[package]
name = "localchat_daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
mdns-sd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
network-interface = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }
dirs = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1.8.0", features = ["v4", "serde"] } 